syntax = "proto3";

option java_package = "az.etibarli.models";
option java_multiple_files = true;

message PersonRequest {
  int64 id = 1;
}

message PersonResponse {
  int64 id = 1;
  string name = 2;
  string surname = 3;
}

service PersonService {
  // server-side streaming
  rpc getPersons(PersonRequest) returns (stream PersonResponse);
}